Remove logo on larger screens and fix navlink alignment.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -666,6 +666,9 @@ footer {
     background-color: #000;
     height: 6vh;
   }
+  .logo {
+    display: none;
+  }
 
   .logo1 ul {
     display: flex;
@@ -774,6 +777,7 @@ footer {
 
   .logo1 ul > li:nth-child(1) {
     padding: 0;
+    margin-left: -35px;
   }
 
   .fa-bars {
